# MLyKit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml
MLyKit/core/: core_functions.py
MLyKit/data_preprocessing/: preprocessing_functions.py
MLyKit/data_visualization/: plotting_functions.py
MLyKit/tests/: test_core_functions.py  test_data_processing_functions.py  test_visualization_functions.py
