[tool.poetry]
name = "mlykit"
version = "0.1.0"
description = "Machine Learning and Data Science toolkit containing common python functions."
authors = ["Ron Mallory <ronnymallory@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
mypy = "^1.5.1"
openpyxl = "^3.1.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"
seaborn = "^0.12.2"

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
